--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -59,8 +59,8 @@ $black-002: rgba(0, 0, 0, 0.02);
 
         .card-img {
             position: relative;
-            margin: 0 10px;
-            
+            padding: 0 10px;
+
             img {
                 width: 100%;
                 height: auto;
@@ -71,23 +71,27 @@ $black-002: rgba(0, 0, 0, 0.02);
             background: $white;
             padding: 10px;
             position: absolute;
-            left: 0;
+            left: 10px;
             bottom: 0;
+            // bottom: -135px; // for bottom up animation
             display: flex;
             flex-direction: column;
             gap: 5px;
             opacity: 0;
-            visibility: hidden;
-            transition: all 0.3s ease-in-out;
+            z-index: -1;
+            // visibility: hidden;
+            transition: all 0.5s ease;
         }
 
         :hover {
             .social-icons {
                 opacity: 1;
-                visibility: visible;
+                // bottom: 0; // for bottom up animation
+                z-index: 1;
+                // visibility: visible;
             }
         }
-        
+
         .card-title {
             padding: 10px 15px;
             box-shadow: 0px 10px 20px rgba(17, 24, 39, 0.1);
