--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -77,6 +77,56 @@
   color: #414652;
 }
 
+.at-a-glance-section {
+  background-image: url(../../img/bg-img/background-img.png);
+  background-color: rgba(17, 24, 39, 0.8);
+}
+.at-a-glance-section .glance-card-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+.at-a-glance-section .at-a-glance-heading {
+  margin-bottom: 30px;
+}
+.at-a-glance-section .at-a-glance-heading h2 {
+  color: #FFFFFF;
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 120%;
+}
+.at-a-glance-section .glance-card {
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+  margin: 0 8px;
+}
+.at-a-glance-section .glance-card .icon-wrapper {
+  height: 64px;
+  width: 64px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background: rgba(255, 99, 20, 0.1);
+}
+.at-a-glance-section .glance-card .glance-counter {
+  padding: 25px 0 15px 0;
+}
+.at-a-glance-section .glance-card .glance-counter p {
+  font-size: 44px;
+  font-weight: 600;
+  line-height: 130%;
+}
+.at-a-glance-section .glance-card .glance-card-title {
+  color: #414652;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 160%;
+}
+
 .pb-50 {
   padding-bottom: 50px;
 }
