--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -4,6 +4,7 @@ $primary-color: #FF6314;
 $white: #FFFFFF;
 $black-80: #414652;
 $black-002: rgba(0, 0, 0, 0.02);
+$orange-10: rgb(255, 99, 20, 0.1);
 
 * {
     margin: 0;
@@ -113,4 +114,66 @@ $black-002: rgba(0, 0, 0, 0.02);
         }
     }
 
+}
+
+.at-a-glance-section {
+    background-image: url(../../img/bg-img/background-img.png);
+    background-color: rgba(17, 24, 39, 0.8);
+
+    .glance-card-wrapper {
+        display: flex;
+        flex-direction: row;
+        // gap: 15px;
+    }
+
+    .at-a-glance-heading {
+        h2 {
+            color: $white;
+            font-size: 64px;
+            font-weight: 600;
+            line-height: 120%;
+        }
+
+        margin-bottom: 30px;
+    }
+
+    .glance-card {
+        background-color: $white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 50px 0;
+        margin: 0 8px;
+
+        .icon-wrapper {
+            height: 64px;
+            width: 64px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            background: $orange-10;
+        }
+
+        .glance-counter {
+            padding: 25px 0 15px 0;
+
+            p {
+                font-size: 44px;
+                font-weight: 600;
+                line-height: 130%;
+            }
+
+            // color: $primary-color;
+        }
+
+        .glance-card-title {
+            color: $black-80;
+            font-size: 20px;
+            font-weight: 400;
+            line-height: 160%;
+
+        }
+    }
 }
