--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -127,6 +127,92 @@
   line-height: 160%;
 }
 
+.latest-news-section {
+  background: rgba(0, 0, 0, 0.02);
+}
+.latest-news-section .latest-news-heading .top-heading {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #FF6314;
+}
+.latest-news-section .latest-news-heading .icon-wrapper {
+  height: 32px;
+  width: 32px;
+  padding: 5px;
+}
+.latest-news-section .latest-news-heading p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 160%;
+  font-family: "inter", sans-serif;
+  margin: auto 0;
+}
+.latest-news-section .latest-news-heading .second-heading h2 {
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 120%;
+}
+.latest-news-section .latest-news-card-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+.latest-news-section .latest-news-card {
+  position: relative;
+  margin: 0 10px;
+}
+.latest-news-section .latest-news-card .latest-news-img img {
+  width: 100%;
+  height: auto;
+}
+.latest-news-section .latest-news-card .news-description {
+  position: absolute;
+  bottom: -125px;
+  background: #FFFFFF;
+  margin: 0 30px;
+  padding: 30px 25px;
+  box-shadow: 1px 2px 2px rgba(194, 194, 194, 0.25);
+}
+.latest-news-section .latest-news-card .news-info {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+.latest-news-section .latest-news-card .news-info p {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  margin: auto 20px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+  color: #414652;
+}
+.latest-news-section .latest-news-card .news-info p span {
+  margin: 0px 5px;
+}
+.latest-news-section .latest-news-card .news-title h5 {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 136%;
+}
+.latest-news-section .latest-news-card .read-more {
+  margin-top: 20px;
+}
+.latest-news-section .latest-news-card .read-more a {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 120%;
+  color: #FF6314;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
 .pb-50 {
   padding-bottom: 50px;
 }
