--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -169,7 +169,7 @@
   position: absolute;
   bottom: -125px;
   background: #FFFFFF;
-  margin: 0 30px;
+  margin: 0 30px 0 20px;
   padding: 30px 25px;
   box-shadow: 1px 2px 2px rgba(194, 194, 194, 0.25);
 }
