--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -239,7 +239,7 @@ $light-gray: #CFD1D4;
             position: absolute;
             bottom: -125px;
             background: $white;
-            margin: 0 30px 0 20px;
+            margin: 0 25px 0 20px;
             padding: 30px 25px;
             box-shadow: 1px 2px 2px rgba(194, 194, 194, 0.25);
 
@@ -257,7 +257,7 @@ $light-gray: #CFD1D4;
                 display: flex;
                 align-items: center;
                 flex-wrap: nowrap;
-                margin: auto 20px;
+                margin: auto 20px auto 0;
                 font-size: 16px;
                 font-weight: 400;
                 line-height: 160%;
@@ -303,4 +303,38 @@ $light-gray: #CFD1D4;
         }
     }
 
+}
+
+.faq-section {
+    .faq-section-heading {
+        .top-heading {
+            display: flex;
+            justify-content: center; // testing
+            align-items: center;
+            gap: 10px;
+            color: $primary-color;
+        }
+
+        .icon-wrapper {
+            height: 32px;
+            width: 32px;
+            padding: 5px;
+        }
+
+        p {
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 160%;
+            font-family: 'inter', sans-serif;
+            margin: auto 0;
+        }
+
+        .second-heading {
+            h2 {
+                font-size: 64px;
+                font-weight: 600;
+                line-height: 120%;
+            }
+        }
+    }
 }
