--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -78,7 +78,7 @@
 }
 
 .at-a-glance-section {
-  background-image: url(../../img/bg-img/background-img.png);
+  background-image: url(../img/bg-img/background-img.png);
   background-color: rgba(17, 24, 39, 0.8);
 }
 .at-a-glance-section .glance-card-wrapper {
@@ -125,6 +125,112 @@
   font-size: 20px;
   font-weight: 400;
   line-height: 160%;
+}
+
+.training-video-section {
+  position: relative;
+  width: 100%;
+  height: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 150px auto;
+  background-image: url(../img/bg-img/training-section-bg.png);
+}
+.training-video-section::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+}
+.training-video-section .training-video-title-row {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+.training-video-section .training-video-title {
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 120%;
+  color: white;
+  text-align: center;
+  margin: 100px auto;
+}
+.training-video-section .tv-play-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.faq-section .faq-section-heading .top-heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #FF6314;
+}
+.faq-section .faq-section-heading .icon-wrapper {
+  height: 32px;
+  width: 32px;
+  padding: 5px;
+}
+.faq-section .faq-section-heading p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 160%;
+  font-family: "inter", sans-serif;
+  margin: auto 0;
+}
+.faq-section .faq-section-heading .second-heading {
+  padding: 0 100px;
+}
+.faq-section .faq-section-heading .second-heading h2 {
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 120%;
+}
+.faq-section .questions-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.faq-section .questions-wrapper .question {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 20px;
+}
+.faq-section .questions-wrapper .answer-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.faq-section .questions-wrapper .question-title {
+  margin: 20px;
+  padding: 10px 20px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 136%;
+}
+.faq-section .questions-wrapper .expand-icon {
+  padding: 0 20px;
+  cursor: pointer;
+}
+.faq-section .questions-wrapper p.question-answer {
+  margin: 0 40px 30px 40px;
+  padding: 5px 20px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 160%;
+  cursor: pointer;
+  display: none;
+}
+.faq-section .questions-wrapper p.expand-answer {
+  display: block;
 }
 
 .latest-news-section {
@@ -211,72 +317,6 @@
   justify-content: space-between;
   padding: 10px 20px;
   background-color: rgba(0, 0, 0, 0.05);
-}
-
-.faq-section .faq-section-heading .top-heading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  color: #FF6314;
-}
-.faq-section .faq-section-heading .icon-wrapper {
-  height: 32px;
-  width: 32px;
-  padding: 5px;
-}
-.faq-section .faq-section-heading p {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 160%;
-  font-family: "inter", sans-serif;
-  margin: auto 0;
-}
-.faq-section .faq-section-heading .second-heading {
-  padding: 0 100px;
-}
-.faq-section .faq-section-heading .second-heading h2 {
-  font-size: 64px;
-  font-weight: 600;
-  line-height: 120%;
-}
-.faq-section .questions-wrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-.faq-section .questions-wrapper .question {
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  margin: 20px;
-}
-.faq-section .questions-wrapper .answer-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: nowrap;
-}
-.faq-section .questions-wrapper .question-title {
-  margin: 20px;
-  padding: 10px 20px;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 136%;
-}
-.faq-section .questions-wrapper .expand-icon {
-  padding: 0 20px;
-  cursor: pointer;
-}
-.faq-section .questions-wrapper p.question-answer {
-  margin: 0 40px 20px 40px;
-  padding: 5px 20px;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 160%;
-  cursor: pointer;
-  display: none;
-}
-.faq-section .questions-wrapper p.expand-answer {
-  display: block;
 }
 
 .pb-50 {
