--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -15,6 +15,141 @@ $light-gray: #CFD1D4;
     box-sizing: border-box;
 }
 
+.about-us-home-2 {
+
+    .about-us-section-content {
+        display: flex;
+    }
+
+    // .about-us-img-wrapper {
+    //     width: 100%;
+    //     display: grid;
+    //     grid-template-columns: repeat(5, 1fr);
+    //     grid-template-rows: repeat(5, 1fr);
+    //     grid-column-gap: 24px;
+    //     grid-row-gap: 24px;
+
+
+
+    //     img:nth-child(1) {
+    //         width: 312px;
+    //         grid-area: 1 /1 / 2 / 2;
+    //     }
+
+    //     img:nth-child(2) {
+    //         width: 312px;
+    //         grid-area: 2 /1 / 3 / 2;
+    //     }
+
+    //     img:nth-child(3) {
+    //         width: 200px;
+    //         grid-area: 1 /2 / 3 / 3;
+    //     }
+    // }
+
+    .about-us-img-wrapper {
+        display: flex;
+        width: 100%;
+        // overflow: hidden;
+
+        .left-img {
+            display: flex;
+            flex-direction: column;
+            margin: 0 12px;
+            width: 70%;
+
+            img {
+                width: 100%;
+                height: auto;
+            }
+
+            img:nth-child(1) {
+                margin-bottom: 12px;
+            }
+
+            img:nth-child(2) {
+                margin-top: 12px;
+            }
+        }
+
+        .right-img {
+            margin: 0 12px;
+            width: 50%;
+
+            img {
+                // width: 100%;
+                height: 605px;
+            }
+        }
+    }
+
+    .about-us-content-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: auto 0;
+    }
+
+    // .about-us-contente-wrapper {
+    //     margin: 0 0 0 150px;
+    // }
+
+    .top-heading {
+        display: flex;
+        // justify-content: center; // testing
+        align-items: center;
+        gap: 10px;
+        color: $primary-color;
+    }
+
+    .icon-wrapper {
+        height: 32px;
+        width: 32px;
+        padding: 5px;
+    }
+
+    p {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 160%;
+        font-family: 'inter', sans-serif;
+        margin: auto 0;
+    }
+
+    .second-heading {
+        h2 {
+            font-size: 64px;
+            font-weight: 600;
+            line-height: 120%;
+        }
+    }
+
+    .about-us-achievements {
+        display: flex;
+
+        h3 {
+            margin: 10px 0;
+            font-size: 24px;
+            font-weight: 600;
+            line-height: 136%;
+        }
+    }
+
+    .about-read-more-btn {
+        display: inline-block;
+        padding: 10px 20px;
+        margin: 10px 0;
+        background-color: $primary-color;
+        color: $white;
+        text-decoration: none;
+        // text-align: center;
+
+        // &:hover {
+        //     background: darken($primary-color, 5%);
+        // }
+    }
+}
+
 .our-team-section {
 
     background: $black-002;
@@ -184,22 +319,46 @@ $light-gray: #CFD1D4;
 .training-video-section {
     position: relative;
     width: 100%;
-    height: 700px;
+    height: 530px;
+    // height: 700px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 150px auto;
-    background-image: url(../img/bg-img/training-section-bg.png);
+    // padding: 87px 0;
+    margin: 0 auto;
+    // background-image: url(../img/bg-img/training-section-bg.png);
+    // background: url(../img/bg-img/training-section-bg.png);
+    background: url(../img/bg-img/training-section-bg.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
     // background: rgba(0, 0, 0, .5);
 
-    &::after {
-        content: '';
+    // &::after {
+    //     content: '';
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     right: 0;
+    //     bottom: 0;
+    //     background: rgba(0, 0, 0, 0.5);
+    // }
+
+    .train-vid-sec-bg {
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
+        width: 100%;
+        height: 100%;
         background: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+    }
+
+    .train-vid-sec-main-content {
+        position: relative;
+        z-index: 2;
     }
 
     .training-video-title-row {
@@ -207,7 +366,7 @@ $light-gray: #CFD1D4;
         display: flex;
         justify-content: center;
         align-items: center;
-        z-index: 2;
+        // z-index: 2;
     }
 
     .training-video-title {
@@ -216,7 +375,7 @@ $light-gray: #CFD1D4;
         line-height: 120%;
         color: white;
         text-align: center;
-        margin: 100px auto;
+        margin: 0 auto 100px auto;
     }
 
     .tv-play-icon {
