--- a/assets/scss/utils/_utilities.scss
+++ b/assets/scss/utils/_utilities.scss
@@ -2,8 +2,16 @@
 //     margin: 0 0;
 // }
 
+.pt-120 {
+    padding-top: 120px;
+}
+
 .pb-50 {
     padding-bottom: 50px;
+}
+
+.pb-250 {
+    padding-bottom: 250px;
 }
 
 .py-120 {
