--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -2,12 +2,16 @@
 
 $primary-color: #FF6314;
 $white: #FFFFFF;
+$black: #000000;
 $black-80: #414652;
 $black-002: rgba(0, 0, 0, 0.02);
 $black-005: rgba(0, 0, 0, 0.05);
 $black-10: rgba(0, 0, 0, 0.10);
 $orange-10: rgb(255, 99, 20, 0.1);
 $light-gray: #CFD1D4;
+$fb-blue: #0567E1;
+$ldin-blue: #0A66C2;
+$p-color: #70747D;
 
 * {
     margin: 0;
@@ -15,10 +19,27 @@ $light-gray: #CFD1D4;
     box-sizing: border-box;
 }
 
+a:link,
+a:visited,
+a:focus {
+    text-decoration: none;
+    color: currenteColor;
+}
+
+.fb-icon {
+    font-size: 26px;
+    color: $fb-blue;
+}
+
+.ldin-icon {
+    color: $ldin-blue;
+}
+
 .about-us-home-2 {
 
     .about-us-section-content {
         display: flex;
+        flex-wrap: wrap;
     }
 
     // .about-us-img-wrapper {
@@ -227,6 +248,11 @@ $light-gray: #CFD1D4;
             z-index: -1;
             // visibility: hidden;
             transition: all 0.5s ease;
+
+            a {
+                height: 32px;
+                margin: 0;
+            }
         }
 
         :hover {
@@ -332,9 +358,10 @@ $light-gray: #CFD1D4;
 .training-video-section {
     position: relative;
     width: 100%;
-    height: 530px;
+    // height: 530px;
     // height: 700px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     // padding: 87px 0;
@@ -342,7 +369,7 @@ $light-gray: #CFD1D4;
     // background-image: url(../img/bg-img/training-section-bg.png);
     // background: url(../img/bg-img/training-section-bg.png);
     background: url(../img/bg-img/training-section-bg.png);
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     // background: rgba(0, 0, 0, .5);
@@ -609,4 +636,153 @@ $light-gray: #CFD1D4;
         }
     }
 
+}
+
+footer {
+    border: 1px solid black;
+    padding: 20px;
+    // text-align: center;
+
+    .d-col-wrapper {
+        display: flex;
+        flex-direction: row;
+        // flex-wrap: wrap;
+        // justify-content: center;
+        // align-items: center;
+        // gap: 30px;
+        // margin-bottom: 20px;
+    }
+
+    .ds-col {
+        padding: 50px;
+    }
+
+    // .ds-col-1 {
+    //     display: flex;
+    //     flex-direction: column;
+    //     column-gap: 130px;
+    //     // justify-content: center;
+    //     align-content: space-between;
+    // }
+
+    .site-logo {
+        margin: 20px 0;
+        width: 150px;
+        height: auto;
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    .site-newsletter {
+        p {
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 160%;
+            margin: 10px 0;
+            color: $p-color;
+        }
+    }
+
+    .newsletter-mail {
+        border: 1px solid $black-10;
+        display: flex;
+        justify-content: space-between;
+
+        input {
+            padding: 10px 20px;
+            border: none;
+        }
+
+        a {
+            color: $white;
+            padding: 10px 20px;
+            background-color: $primary-color;
+        }
+    }
+
+    .footer-1-spacer {
+        height: 120px;
+    }
+
+    .contact-social-info {
+        .req-demo {
+            p {
+                font-size: 18px;
+                font-weight: 400;
+                line-height: 160%;
+                margin: 10px 0;
+                color: $black;
+            }
+        }
+
+        .social-links {
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+
+            .social-link {
+                height: 40px;
+                width: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                // border-radius: 50%;
+                color: $black;
+                background: $black-005;
+                transition: .5s ease;
+
+                &:hover {
+                    color: $white;
+                    background-color: $primary-color;
+                }
+
+                a {
+                    height: 24px;
+                    width: 24px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+        }
+    }
+
+    .top-links,
+    .links-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        a {
+            font-size: 20px;
+            font-weight: 400;
+            line-height: 160%;
+            color: $p-color;
+        }
+    }
+
+    .ds-col-3,
+    .ds-col-4 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .spacer-70 {
+        height: 70px;
+
+    }
+    .spacer-130 {
+        height: 130px;
+    }
+
+    // .footer-title {
+    //     font-size: 24px;
+    //     font-weight: 500;
+    //     line-height: 136%;
+    //     color: $black;
+    //     // margin: 20px 0;
+    // }
 }
