--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "inter", sans-serif;
 }
 
 a:link,
@@ -240,6 +241,7 @@ a:focus {
 .training-video-section {
   position: relative;
   width: 100%;
+  height: 700px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -443,65 +445,154 @@ a:focus {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
+.course-package-section .course-package-main-area {
+  overflow-x: hidden;
+  position: relative;
+  background: url(../img/course-home-2/image_2025-09-07_15-57-27.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.course-package-section .course-package-main-area::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.8);
+}
+.course-package-section .course-package-main-area .course-content-columns {
+  padding: 119px 0 108px 70px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 2;
+}
+.course-package-section .course-package-main-area .course-sec-title,
+.course-package-section .course-package-main-area .course-sec-quote {
+  color: #FFFFFF;
+}
+.course-package-section .course-package-main-area .course-sec-title {
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 120%;
+  margin-bottom: 20px;
+}
+.course-package-section .course-package-main-area .course-sec-quote {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 160%;
+  margin: 16px 166px 32px 0;
+  color: #CFD1D4;
+}
+.course-package-section .course-package-main-area .navigation-buttons {
+  display: flex;
+  flex-direction: row;
+}
+.course-package-section .course-package-main-area .navigation-buttons a.pkg-btn,
+.course-package-section .course-package-main-area .navigation-buttons a.start-course-btn {
+  text-decoration: none;
+  padding: 15px 30px;
+  color: #FFFFFF;
+  margin: 0 10px 0 0;
+}
+.course-package-section .course-package-main-area .navigation-buttons .pkg-btn {
+  background-color: #FF6314;
+}
+.course-package-section .course-package-main-area .navigation-buttons .start-course-btn {
+  border: 1px solid #6B7280;
+  background-color: transparent;
+}
+.course-package-section .course-package-main-area .course-package-sec-imgs {
+  position: relative;
+}
+.course-package-section .course-package-main-area .course-package-sec-imgs img {
+  width: 100%;
+  height: auto;
+}
+.course-package-section .course-package-main-area .course-package-sec-imgs .img-1-wrapper {
+  width: 175px;
+  position: absolute;
+  right: 50px;
+  top: -50px;
+  z-index: 3;
+}
+.course-package-section .course-package-main-area .course-package-sec-imgs .img-2-wrapper {
+  width: 857px;
+  position: absolute;
+  right: -185px;
+  top: -30px;
+}
+
 footer {
-  border: 1px solid black;
-  padding: 20px;
+  border: 1px solid #E8E8EA;
+  border-style: inset;
+  overflow: hidden;
+  height: 623px;
 }
 footer .d-col-wrapper {
   display: flex;
   flex-direction: row;
 }
 footer .ds-col {
-  padding: 50px;
+  padding: 50px 0;
+}
+footer .ds-col-1 {
+  width: 516px;
+  padding-right: 102px;
 }
 footer .site-logo {
-  margin: 20px 0;
-  width: 150px;
+  width: 176px;
   height: auto;
 }
 footer .site-logo img {
   width: 100%;
   height: auto;
 }
+footer .site-newsletter {
+  margin: 19px 0 32px 0;
+}
 footer .site-newsletter p {
   font-size: 18px;
   font-weight: 400;
   line-height: 160%;
-  margin: 10px 0;
   color: #70747D;
 }
 footer .newsletter-mail {
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid #E8E8EA;
   display: flex;
   justify-content: space-between;
+  padding: 4px 5px;
 }
 footer .newsletter-mail input {
-  padding: 10px 20px;
+  padding: 10px 25px;
   border: none;
 }
 footer .newsletter-mail a {
   color: #FFFFFF;
-  padding: 10px 20px;
+  padding: 10px 25px;
   background-color: #FF6314;
 }
-footer .footer-1-spacer {
-  height: 120px;
+footer .contact-social-info {
+  margin-top: 129px;
 }
 footer .contact-social-info .req-demo p {
-  font-size: 18px;
+  margin: 24px 0;
+  font-size: 20px;
   font-weight: 400;
   line-height: 160%;
-  margin: 10px 0;
-  color: #000000;
+  color: #111827;
 }
-footer .contact-social-info .social-links {
+footer .social-links {
   display: flex;
   flex-direction: row;
   gap: 10px;
 }
-footer .contact-social-info .social-links .social-link {
-  height: 40px;
-  width: 40px;
+footer .social-link {
+  height: 55px;
+  width: 55px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -509,22 +600,18 @@ footer .contact-social-info .social-links .social-link {
   background: rgba(0, 0, 0, 0.05);
   transition: 0.5s ease;
 }
-footer .contact-social-info .social-links .social-link:hover {
+footer .social-link:hover {
   color: #FFFFFF;
   background-color: #FF6314;
 }
-footer .contact-social-info .social-links .social-link a {
-  height: 24px;
-  width: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+footer .social-link i {
+  font-size: 20px;
 }
 footer .top-links,
 footer .links-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 12px;
 }
 footer .top-links a,
 footer .links-wrapper a {
@@ -533,16 +620,39 @@ footer .links-wrapper a {
   line-height: 160%;
   color: #70747D;
 }
+footer .ds-col-2,
+footer .ds-col-3 {
+  border: 1px solid #E8E8EA;
+  border-top: none;
+  border-bottom: none;
+}
 footer .ds-col-3,
 footer .ds-col-4 {
   display: flex;
   flex-direction: column;
+  align-content: space-between;
 }
-footer .spacer-70 {
-  height: 70px;
+footer .ds-col-2 {
+  padding: 80px 46px 0 46px;
 }
-footer .spacer-130 {
-  height: 130px;
+footer .ds-col-3 {
+  padding: 80px 36px 0 36px;
+}
+footer .ds-col-4 {
+  padding: 80px 0 0 30px;
+}
+footer .footer-address,
+footer .footer-copyright {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 160%;
+  color: #70747D;
+}
+footer .footer-address {
+  margin-top: 100px;
+}
+footer .footer-copyright {
+  margin-top: 150px;
 }
 
 .pt-120 {
