--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -515,33 +515,42 @@ a:focus {
     background: $black-002;
 
     .latest-news-heading {
-        .top-heading {
+        margin-bottom: 50px;
+
+        .sub-heading {
             display: flex;
             // justify-content: center; // testing
             align-items: center;
             gap: 10px;
             color: $primary-color;
+            margin-bottom: 12px;
         }
 
         .icon-wrapper {
             height: 32px;
             width: 32px;
             padding: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
         }
 
         p {
             font-size: 18px;
             font-weight: 400;
             line-height: 160%;
-            font-family: 'inter', sans-serif;
             margin: auto 0;
         }
 
-        .second-heading {
+        .heading {
+
             h2 {
                 font-size: 64px;
                 font-weight: 600;
                 line-height: 120%;
+                // color: #111827;
+                color: $black-100;
             }
         }
     }
@@ -556,7 +565,7 @@ a:focus {
 
     .latest-news-card {
         position: relative;
-        margin: 0 10px;
+        // margin: 0 10px;
 
         @media(max-width: 768px) {
             // width: 48%;
@@ -640,6 +649,14 @@ a:focus {
         }
     }
 
+    .ln-card-1 {
+        margin: 0 24px 0 0;
+    }
+
+    .ln-card-3 {
+        margin: 0 0 0 24px;
+    }
+
 }
 
 .course-package-section {
@@ -700,6 +717,9 @@ a:focus {
                 padding: 15px 30px;
                 color: $white;
                 margin: 0 10px 0 0;
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 120%;
             }
 
             .pkg-btn {
@@ -721,9 +741,9 @@ a:focus {
             }
 
             .img-1-wrapper {
-                width: 175px;
+                width: 178px;
                 position: absolute;
-                right: 50px;
+                right: 60px;
                 top: -50px;
                 z-index: 3;
             }
@@ -731,8 +751,8 @@ a:focus {
             .img-2-wrapper {
                 width: 857px;
                 position: absolute;
-                right: -185px;
-                top: -30px;
+                right: -186px;
+                top: -25px;
             }
         }
     }
@@ -758,6 +778,7 @@ footer {
 
     .ds-col {
         padding: 50px 0;
+        height: 623px;
     }
 
     .ds-col-1 {
@@ -806,6 +827,10 @@ footer {
             color: $white;
             padding: 10px 25px;
             background-color: $primary-color;
+            font-family: "Satoshi", sans-serif !important;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 24px;
         }
     }
 
@@ -916,7 +941,7 @@ footer {
     }
 
     .footer-copyright {
-        margin-top: 150px;
+        margin-top: 140px;
     }
 
     // .footer-title {
